# aift-ai

./: .gitignore  Dockerfile  README.md  main_test_push_up.py  pyproject.toml  server.py  test.py
.github/workflows/: dev-deploy-docker.yml
base_model/: exercise_detect.py
data_loader/: __init__.py
figures/: draw_keypoints.py
metrics/: score.py
ops/grpc/: client.py  infer.proto  infer.py  infer_pb2.py  infer_pb2_grpc.py
preprocessing/: __init__.py
rtc/: client.js  index.html  server.py
trainers/: base.py  exercise_trainer.py  push_up.py
utils/: __init__.py  constants.py  crop_video.py
