[tool.poetry]
name = "ai-fitness-trainer-ai"
version = "0.0.0"
description = "AI Fitness Trainer"
authors = ["Khánh Pluto"]
license = "Khánh Pluto"

[tool.poetry.dependencies]
python = "^3.7"
python-slugify = "^4.0"
Unidecode = "^1.1"
loguru = "^0.5.1"
PyYAML = "^5.4.1"
python-dotenv = "^0.17.1"
wget = "^3.2"
tensorflow = "2.4.0"
tensorflow-hub = "^0.12.0"
matplotlib = "^3.4.3"
opencv-python = "4.5.2.54"
scipy = "^1.7.3"
grpcio = "1.32.0"
grpcio-tools = "1.32.0"
Cython = "^0.29.26"
aiortc = "^1.3.1"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.0"
autoflake = "^1.4"
wemake-python-styleguide = "^0.15.0"
mypy = "^0.790"
flake8-fixme = "^1.1"
pytest = "^6.1"
pytest-cov = "^2.10"
pytest-asyncio = "^0.14.0"
pytest-env = "^0.6.2"
docker = "^4.3"
httpx = "^0.16.1"
asgi-lifespan = "^1.0.1"
autopep8 = "^1.5.7"

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "error"
addopts = '''
  --strict-markers
  --tb=short
  --cov=app
  --cov=tests
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml
  --no-cov-on-fail
  --cov-fail-under=100
'''
env = ["SECRET_KEY=secret"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
